# play-with-sherpa-onnx

./: PIPELINE_FLOW.md  README.md  VOICE_PIPELINE_README.md  WAKE_WORD_CONFIG.md  debug_voice_assistant.py  demo_voice_pipeline.py  main.py  pyproject.toml  run.py  test_client.py  test_original.py  test_with_test_keywords.py  voice_assistant_api.py  需求.txt
backend/: __init__.py  config.py  main.py
backend/core/: __init__.py  keyword_spotter.py  vad_detector.py  voice_assistant_pipeline.py
models/sherpa-onnx-kws-zipformer-wenetspeech-3.3M-2024-01-01/: custom_keywords.txt
mvp-webrtc/: README.md  pyproject.toml  requirements.txt  server.py
mvp-webrtc/static/: index.html
xiaoli/: README.md  app.py  kws.py  run.py  test_audio_sizes.py  test_audio_ws.py  test_client.py  test_kws.py  test_minimal.py  test_minimal_client.py  test_sherpa_direct.py  test_simple_audio.py  test_ws_simple.py  vad.py
xiaoli/model_data/kws/: keywords_converted.txt  keywords_with_scores.txt
xiaoli/model_data/kws/text/: keyword_raw.txt  keyword_token.txt  keyword_with_scores.txt
xiaoli/scripts/: README.md  gen_keyword.sh  gen_keyword_advanced.sh  gen_keyword_with_scores.sh  test_keyword_scripts.sh  text2token.py
xiaoli/static/css/: kws.css
xiaoli/static/js/: kws.js
xiaoli/templates/: index.html  kws.html  logs.html  settings.html
