[project]
name = "sherpa-onnx-demo"
version = "0.1.0"
description = "Sherpa-ONNX 中文唤醒词实时检测系统"
readme = "README.md"
requires-python = ">=3.12.9"
dependencies = [
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
    "websockets>=12.0",
    "sherpa-onnx>=1.10.0",
    "numpy>=1.24.0",
    "pyaudio>=0.2.11",
    "python-multipart>=0.0.6",
    "aiofiles>=23.2.0",
    "pydantic>=2.5.0",
    "python-jose[cryptography]>=3.3.0",
    "passlib[bcrypt]>=1.7.4",
    "python-dotenv>=1.0.0",
    "loguru>=0.7.0",
    "pypinyin>=0.50.0",
    "torch>=2.9.0",
    "torchaudio>=2.9.0",
    "sentencepiece>=0.2.1",
    "jinja2>=3.1.0",
    "websockets>=12.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "black>=23.0.0",
    "isort>=5.12.0",
    "flake8>=6.0.0",
    "mypy>=1.7.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["backend"]

[tool.black]
line-length = 88
target-version = ['py312']

[tool.isort]
profile = "black"
line_length = 88
